syntax = "proto3";

package stream_plan;

option java_multiple_files = true;
option java_package = "com.risingwave.proto.streaming.plan";
option optimize_for = SPEED;

import "expr.proto";
import "plan.proto";

// Hash mapping for compute node. Stores mapping from virtual key to actor id.
message ActorMapping {
  repeated uint32 hash_mapping = 1;
}

// todo: StreamSourceNode or TableSourceNode
message SourceNode {
  enum SourceType {
    TABLE = 0;
    SOURCE = 1;
  }
  plan.TableRefId table_ref_id = 1;
  repeated int32 column_ids = 2;
  SourceType source_type = 3;

  StreamSourceState stream_source_state = 4;
}

message StreamSourceState {
  string split_type = 1;
  repeated bytes stream_source_splits = 2;
}

message ProjectNode {
  repeated expr.ExprNode select_list = 1;
}

message FilterNode {
  expr.ExprNode search_condition = 1;
}

// A materialized view is regarded as a table,
// hence we copy the CreateTableNode definition in OLAP PlanNode.
// In addition, we also specify primary key to MV for efficient point lookup during update and deletion.
message MaterializeNode {
  plan.TableRefId table_ref_id = 1;
  plan.TableRefId associated_table_ref_id = 2;
  // Column indexes and orders of primary key
  repeated plan.ColumnOrder column_orders = 3;
  // Column IDs of input schema
  repeated int32 column_ids = 4;
  repeated int32 distribution_keys = 5;
}

// Remark by Yanghao: for both local and global we use the same node in the protobuf.
// Local and global aggregator distinguish with each other in PlanNode definition.
message SimpleAggNode {
  repeated expr.AggCall agg_calls = 1;
  repeated int32 distribution_keys = 2;
}

message HashAggNode {
  repeated int32 distribution_keys = 1;
  repeated expr.AggCall agg_calls = 2;
}

message TopNNode {
  repeated plan.OrderType order_types = 1;
  // 0 means no limit as limit of 0 means this node should be optimized away
  uint64 limit = 2;
  uint64 offset = 3;
  repeated int32 distribution_keys = 4;
}

message HashJoinNode {
  plan.JoinType join_type = 1;
  repeated int32 left_key = 2;
  repeated int32 right_key = 3;
  expr.ExprNode condition = 4;
  repeated int32 distribution_keys = 5;
}

message MergeNode {
  repeated uint32 upstream_actor_id = 1;
  // The schema of input columns.
  repeated plan.Field fields = 2;
}

// passed from frontend to meta, used by fragmenter to generate `MergeNode`
// and maybe `DispatcherNode` later.
message ExchangeNode {
  // The schema of input columns.
  repeated plan.Field fields = 1;
  DispatchStrategy strategy = 2;
}

// ChainNode is used for mv on mv.
// ChainNode is like a "UNION" on mv snapshot and streaming. So it takes two inputs with fixed order:
//   1. MergeNode (as a placeholder) for streaming read.
//   2. BatchPlanNode for snapshot read.
message ChainNode {
  plan.TableRefId table_ref_id = 1;
  // The schema of input stream, which will be used to build a MergeNode
  repeated plan.Field upstream_fields = 2;
  repeated int32 column_ids = 3;
}

// BatchPlanNode is used for mv on mv snapshot read.
// BatchPlanNode is supposed to carry a batch plan that can be optimized with the streaming plan.
// Currently, streaming to batch push down is not yet supported, BatchPlanNode is simply a table scan.
message BatchPlanNode {
  plan.TableRefId table_ref_id = 1;
  repeated plan.ColumnDesc column_descs = 2;
  repeated int32 distribution_keys = 3;
}

message StreamNode {
  oneof node {
    SourceNode source_node = 4;
    ProjectNode project_node = 5;
    FilterNode filter_node = 6;
    MaterializeNode materialize_node = 7;
    SimpleAggNode local_simple_agg_node = 16;
    SimpleAggNode global_simple_agg_node = 8;
    HashAggNode hash_agg_node = 9;
    TopNNode append_only_top_n_node = 10;
    HashJoinNode hash_join_node = 11;
    TopNNode top_n_node = 12;
    MergeNode merge_node = 13;
    ExchangeNode exchange_node = 14;
    ChainNode chain_node = 15;
    BatchPlanNode batch_plan_node = 17;
  }
  // The id for the operator.
  uint64 operator_id = 1;
  // Child node in plan aka. upstream nodes in the streaming DAG
  repeated StreamNode input = 3;
  repeated uint32 pk_indices = 2;
  string identity = 18;
}

enum DispatcherType {
  INVALID = 0;
  HASH = 1;
  BROADCAST = 2;
  SIMPLE = 3;
}

message DispatchStrategy {
  DispatcherType type = 1;
  repeated uint32 column_indices = 2;
}

// A dispatcher redistribute messages.
// We encode both the type and other usage information in the proto.
message Dispatcher {
  DispatcherType type = 1;
  repeated uint32 column_indices = 2;
  // The hash mapping for consistent hash.
  ActorMapping hash_mapping = 3;
  // Number of downstreams decides how many endpoints a dispatcher should dispatch.
  repeated uint32 downstream_actor_id = 5;
}

// A StreamActor is a running fragment of the overall stream graph,
message StreamActor {
  uint32 actor_id = 1;
  uint32 fragment_id = 2;
  StreamNode nodes = 3;
  repeated Dispatcher dispatcher = 4;
  // The actors that send messages to this actor.
  // Note that upstream actor ids are also stored in the proto of merge nodes.
  // It is painstaking to traverse through the node tree and get upstream actor id from the root StreamNode.
  // We duplicate the information here to ease the parsing logic in stream manager.
  repeated uint32 upstream_actor_id = 6;
}
